# fastapi-skeleton

./: Dockerfile  README.md  database.db  docker-compose.yaml  pyproject.toml
.github/workflows/: pipeline.yaml
fastapi_skeleton/: app.py  database.py  schemas.py  security.py  settings.py
fastapi_skeleton/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: 5465da5c7aec_create_users_table.py
scripts/: entrypoint.sh
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_user.py
