[tool.poetry]
name = "fastapi-skeleton"
version = "0.1.0"
description = ""
authors = ["IvanFrezzaJr <ivanfrezza@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.3"}
pydantic = {extras = ["email"], version = "^2.9.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
pydantic-settings = "^2.6.0"
alembic = "^1.13.3"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
pyjwt = "^2.9.0"
python-multipart = "^0.0.16"
psycopg = {extras = ["binary"], version = "^3.2.3"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
taskipy = "^1.14.0"
factory-boy = "^3.3.1"
freezegun = "^1.5.1"
testcontainers = "^4.8.2"
toolong = "^1.5.0"


[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'


[tool.ruff]
line-length = 79
extend-exclude = ['migrations']


[tool.ruff.lint]
preview = true
# isort, pyflakes, pycodestyle(erros), pycodestyle(avisos), pylint, flake8-pytest
select = ['I', 'F', 'E', 'W', 'PL', 'PT']


[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.taskipy.tasks]
run = 'fastapi dev fastapi_skeleton/app.py'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

pre_test = 'task lint'
test = 'pytest --cov=fastapi_skeleton -vv'
post_test = 'coverage html'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
